<resources>
    <string name="app_name">Myproject</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="admin">Admin</string>
    <string name="cat1">SPORT</string>
    <string name="menu_Acceuil">Acceuil</string>
    <string name="menu_cours">Cours</string>
    <string name="menu_examen">Examen</string>
    <string name="menu_tools">Meilleur résultat</string>
    <string name="aide">Aide</string>
    <string name="menu_localisation">Localisation</string>
    <string name="menu_send">Info !</string>
    <string name="chargement_de_la_carte">Chargement de la carte&#8230;</string>
</resources>
