<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_Acceuil">

    <fragment
        android:id="@+id/nav_Acceuil"
        android:name="com.DSI31G4.testconcoure.ui.acceuil.AcceuilFragment"
        android:label="@string/menu_Acceuil"
        tools:layout="@layout/fragment_acceuil" />

    <fragment
        android:id="@+id/nav_cours"
        android:name="com.DSI31G4.testconcoure.ui.cours.CoursFragment"
        android:label="@string/menu_cours"
        tools:layout="@layout/fragment_cours" />

    <fragment
        android:id="@+id/nav_examen"
        android:name="com.DSI31G4.testconcoure.ui.examen.ExamenFragment"
        android:label="@string/menu_examen"
        tools:layout="@layout/fragment_examen" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="com.DSI31G4.testconcoure.ui.tools.ToolsFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/nav_localisation"
        android:name="com.DSI31G4.testconcoure.ui.localisation.LocalisationFragment"
        android:label="@string/menu_localisation"
        tools:layout="@layout/fragment_localisation" />

    <fragment
        android:id="@+id/nav_send"
        android:name="com.DSI31G4.testconcoure.ui.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />
</navigation>